Expose NPS phase two queries
